src/main/css/components/table.css
/**************************************************************************

  TABLES

**************************************************************************/

/**************************************************************************
  ACTIVE/INACTIVE ROWS
**************************************************************************/

tr.active {
  /* OK */
}

tr.inactive td > * {
  opacity: 0.4;
}

/**************************************************************************
  LIST TABLE
**************************************************************************/

.list-table {
  width: 100%;
  margin-bottom: 27px;
}

.list-table.list-table-bt-0 tr:first-child td {
  border-top: none;
}

.list-table td {
  vertical-align: middle !important;
  padding: 12px;
  border-top: 1px solid #dddddd;
  @apply dark:tw-border-zinc-700;
}

.list-table td.number {
  padding-left: 24px;
}

.list-table tr:last-child td {
  border-bottom: 1px solid #dddddd;
  @apply dark:tw-border-zinc-700;
}

.list-table th {
  padding: 8px;
}

.list-table--second-row {
  margin: 10px 0 0 0;
}

/**************************************************************************
  STRIPED TABLE
**************************************************************************/

.striped-table tr td {
  @apply tw-bg-white;
  @apply dark:tw-bg-zinc-900;
}

.striped-table tr:nth-child(even) td {
  @apply tw-bg-zinc-50;
  @apply dark:tw-bg-zinc-800;
}

/**************************************************************************
  BORDERED TABLE
**************************************************************************/

.bordered-table tbody {
  border-left: 1px solid #dddddd;
  border-right: 1px solid #dddddd;
  @apply dark:tw-border-neutral-700;
}

/**************************************************************************
  SELECTABLE TABLE
**************************************************************************/

.selectable-table tr:hover td {
  cursor: pointer;
  background-color: #fafafa;
  @apply dark:tw-bg-zinc-800;
}

.selectable-table tr:hover .action-link {
  @apply tw-text-opacity-75 !important;
}
.selectable-table tr:hover .action-link:hover {
  @apply tw-text-opacity-100 !important;
}

/**************************************************************************
  TABLE SORTER
**************************************************************************/

.tablesorter-header {
  color: #2a6496;
  font-weight: normal;
  @apply dark:tw-text-sky-500;
}

.tablesorter-header:hover {
  cursor: pointer;
  color: #1896db;
  @apply dark:tw-text-sky-400;
}

.tablesorter-header-inner {
  display: flex;
  align-items: center;
}

th.sortable-field .tablesorter-header-inner:after {
  content: "";
  margin-left: 0.5rem;
  background-size: cover;
  width: 16px;
  height: 16px;
  background-image: url("../icons/selector.svg");
}

.tw-dark th.sortable-field .tablesorter-header-inner:after {
  background-image: url("../icons/selector-dark.svg");
}

th.tablesorter-headerDesc .tablesorter-header-inner:after {
  background-image: url("../icons/chevron-down.svg");
}

.tw-dark th.tablesorter-headerDesc .tablesorter-header-inner:after {
  background-image: url("../icons/chevron-down-dark.svg");
}

th.tablesorter-headerAsc .tablesorter-header-inner:after {
  background-image: url("../icons/chevron-up.svg");
}

.tw-dark th.tablesorter-headerAsc .tablesorter-header-inner:after {
  background-image: url("../icons/chevron-up-dark.svg");
}

/**************************************************************************
  TABLE OVERFLOW HANDLING
**************************************************************************/
.overflow {
  white-space: nowrap;
  max-width: 15em;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

/**************************************************************************
  CONTROL HEIGHT OF TABLE CELL CONTENT
**************************************************************************/

td.halves h4 {
  margin-top: 5px;
}

/**************************************************************************
  Absence Type Settings Table
**************************************************************************/

.absence-type-approval-checkbox {
  width: 1.125rem;
  height: 1.125rem;
  appearance: none;
  @apply tw-border;
  @apply tw-border-zinc-400;
  @apply tw-rounded;
  @apply tw-transition-colors;
}

.absence-type-approval-checkbox:checked {
  @apply tw-bg-blue-500 !important;
  @apply tw-border-blue-500 !important;
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
}

table.absence-type-settings-table thead {
  position: sticky;
  top: 3.25rem; /* header height */
  @apply tw-bg-white;
  @apply dark:tw-bg-zinc-900;
}

@screen sm {
  table.absence-type-settings-table thead {
    top: 3rem; /* header height */
  }
}

/* kudos https://css-tricks.com/responsive-data-tables/ */
@media only screen and (max-width: 639px) {
  table.absence-type-settings-table {
    display: block;

    /* Force table to not be like tables anymore */
    thead,
    tbody,
    th,
    td,
    tr {
      display: block;
    }

    /* Hide table headers (but not display: none;, for accessibility) */
    thead tr {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }

    tbody {
      tr {
        @apply tw-rounded;
        @apply tw-border;
        @apply tw-p-2;
        @apply tw-transition-colors;
        @apply tw-bg-white;
        @apply dark:tw-border-zinc-800;
        @apply dark:tw-bg-zinc-800;
        @apply dark:tw-bg-opacity-20;
      }

      tr:not(:last-child) {
        @apply tw-mb-4;
      }

      tr[data-enabled="true"] {
        @apply tw-border-blue-100;
        @apply tw-bg-blue-50;
        @apply tw-bg-opacity-20;
        @apply dark:tw-border-zinc-800;
        @apply dark:tw-bg-zinc-800;
        @apply dark:tw-bg-opacity-20;
      }

      td {
        /* Behave  like a "row" */
        @apply tw-px-2;
        @apply tw-py-1;
        display: flex;
        align-items: center;
        @apply tw-text-base;
        @apply tw-text-black-almost;
        @apply dark:tw-text-zinc-100;
      }

      tr[data-enabled="false"] td {
        @apply tw-text-opacity-75;
      }

      tr[data-enabled="false"] .absence-type-approval-checkbox {
        @apply tw-border-zinc-300;
      }

      tr[data-enabled="false"] .absence-type-approval-checkbox:checked {
        @apply tw-bg-blue-300;
        @apply tw-border-blue-300;
      }

      td::before {
        /* Now like a table header */
        width: 40%;
        white-space: nowrap;
        @apply tw-pr-4;
        @apply tw-font-medium;
        @apply tw-text-zinc-800;
        @apply dark:tw-text-zinc-200;
        @apply tw-text-sm;
        @apply tw-truncate;
      }

      /*
      Label the data
      */
      td::before {
        content: attr(data-th-text);
      }
    }
  }
}

@screen sm {
  table.absence-type-settings-table tr {
    @apply tw-transition-colors;
  }

  table.absence-type-settings-table tr[data-enabled="false"] {
    @apply tw-text-zinc-500;
    @apply dark:tw-text-zinc-300;
  }

  table.absence-type-settings-table tr[data-enabled="false"]:hover {
    @apply tw-bg-zinc-100;
    @apply dark:tw-bg-zinc-800;
  }

  table.absence-type-settings-table tr[data-enabled="true"] {
    @apply tw-text-blue-900;
    @apply tw-bg-blue-50;
    @apply dark:tw-text-zinc-300;
    @apply dark:tw-bg-zinc-800;
    @apply tw-bg-opacity-75;
  }

  table.absence-type-settings-table tr[data-enabled="true"]:hover {
    @apply tw-bg-blue-100;
    @apply dark:tw-bg-zinc-700;
    @apply tw-bg-opacity-70;
  }

  table.absence-type-settings-table tr[data-enabled="false"] .absence-type-approval-checkbox {
    @apply tw-border-zinc-300;
  }
  table.absence-type-settings-table tr[data-enabled="false"] .absence-type-approval-checkbox:checked {
    @apply tw-bg-blue-300;
    @apply tw-border-blue-300;
  }

  table.absence-type-settings-table {
    border-collapse: separate;
    border-spacing: 0 0.25rem;

    thead {
      th {
        @apply tw-text-sm;
        @apply tw-px-4;
        @apply tw-py-1;
      }

      th:first-of-type {
        @apply tw-pr-4;
      }
    }

    tbody {
      td {
        @apply tw-mb-2;
        @apply tw-py-1;
      }

      td:first-of-type {
        @apply tw-rounded-l;
        @apply tw-pl-4;
        @apply tw-pr-4;
      }
      td:not(:first-of-type):not(:last-of-type) {
        @apply tw-pl-4;
        @apply tw-pr-8;
      }
      td:last-of-type {
        @apply tw-rounded-r;
        @apply tw-pl-4;
        @apply tw-pr-4;
      }
    }
  }
}

@screen md {
  table.absence-type-settings-table tbody td:not(:first-of-type):not(:last-of-type) {
    @apply tw-pr-16;
  }
}

